# 2-speaker-single-process

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
